# win-dir-wsl2

./: .gitignore  Cargo.toml  app.rc  build.rs  log4rs.yml  main.rs
