[package]
name = "explorer_selection"
version = "1.0.0"
edition = "2021"

[dependencies.windows]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
	"Win32_System_Variant",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
	"Win32_UI_WindowsAndMessaging",
	"Win32_System_Console",
]

[dependencies]
log4rs = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "win-dir-forwarder"
path = "main.rs"
