[package]
name = "win_dir_wsl2"
version = "1.0.0"
edition = "2021"

[dependencies.windows]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
]

[dependencies]
log4rs = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "win-dir-wsl2"
path = "main.rs"
